overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ body {
   font-size: 1.125rem;
   line-height: 1.5rem;
   font-weight: 400;
+  overflow-x: hidden;
 }
 a {
   box-shadow: none;
